vlib/v/checker/tests/array_init_with_void_value_err.vv
module main

fn main() {
	a := [yo()]
	println(a)
}

fn yo() {}
